# robovat

./: .gitignore  pyproject.toml
A3C/: network.py
agent/a3c/: A3C_config.py  A3C_network.py  A3C_worker.py
configs/: logging.config
configs/envs/: arm_env.yaml
configs/envs/franka_panda_envs/: franka_panda_free_grasp_4dof_env_EGAD_grasp.yaml  franka_panda_grasp_4dof_env.yaml  (+2 more)
configs/policies/: antipodal_grasp_4dof_policy.yaml
configs/robots/: franka_panda.yaml  franka_panda_gripper.yaml
docs/: 2H2R_RUNS.csv
docs/pose-estimation-results/: X-result.csv  Y-result.csv  Z-result.csv  pitch-result.csv  roll-result.csv  yaw-result.csv
robovat/A3C/: __init__.py  constants.py  network.py  worker.py
robovat/agent/: __init__.py  network.py  worker.py
robovat/envs/: __init__.py  arm_env.py  robot_env.py
robovat/io/: episode_generation.py  episode_generation_curious.py  hdf5_utils.py
robovat/math/: euler.py  orientation.py  quaternion.py
robovat/observations/: pose_obs.py
robovat/policies/: __init__.py  network.py  push_policy.py  random_policy.py
robovat/reward_fns/: push_reward.py
robovat/robots/: robot.py  robot_command.py
robovat/simulation/: body.py  controllable_body.py  controllable_constraint.py  link.py  simulator.py
robovat/utils/: logging.py  yaml_config.py
tools/: A3C_constants.py  A3C_network.py  A3C_worker.py  curious_agent.py  demo_grasp_jzy.py  pose-estimation.py  pose_estimation.py  pose_log.py  ppo.py  run-A3C.py  run-curious-agent (copy).py  run-curious-agent.py  run-curious-agent2.py  run.py  run_A3C.py  run_PPO.py  run_env.py
(+482 files in other folders)
